# rust-rocket-serde-diesel-api

./: .env  Cargo.toml  README.md  diesel.toml
src/: main.rs
src/api/: mod.rs
src/api/dao/: client_dao.rs  mod.rs  user_dao.rs
src/api/model/: client.rs  mod.rs  user.rs
src/api/route/: client_route.rs  mod.rs  user_route.rs
src/api/service/: client_service.rs  mod.rs  user_service.rs
src/common/: mod.rs
src/common/http/: error_warning.rs  mod.rs  response_wrapper.rs
src/common/result/: mod.rs  result.rs
src/config/db/: mod.rs  schema.rs
src/config/db/migration/2020-11-26-202647_client/: up.sql
src/config/db/migration/2020-11-26-202707_user/: up.sql
web/: index.html
